--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <hr>
 <img src="sun.jpg" height=481 width=640>
 <p>Our solar system consists of 8 planets that orbit around the sun. In order from closest to farthest from the sun the planets go as follows: Mercury, Venus, Earth, Mars, Jupiter, Saturn, Uranus, Neptune. After Neptune comes Pluto, which is no longer considered a planet but a dwarf planet instead.</p>
-<a href="https://mohanraghave.github.io/Sun/>Sun</a>
-<a href="
+<a href="https://mohanraghave.github.io/Sun/"<a>
+<a href="https://mohanraghave.github.io/Mercury/">Mercury</a>
 </body>
 </html>
